# grupy_landingpage

./: CONTRIBUTING.md  README.md  pyproject.toml
src/: app.py
src/data/: README.md  participantes.json
src/static/css/: base.css  comunidade.css  github.css  index.css
src/static/js/: comunidade.js  index.js
src/templates/: base.html  comunidade.html  em-desenvolvimento.html  github.html  index.html
