[project]
name = "landingpage"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.119.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "pytest>=8.4.2",
    "python-multipart>=0.0.20",
    "uvicorn>=0.37.0",
]
